
<!--
  ~
  ~ MIT License
  ~
  ~ Copyright (c) 2021 Felix Biego
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
	<string name="locale">English</string>
	<string name="app_name">Retweet</string>
	<string name="notification_permissions">To function properly, Retweet needs notification permissions. If permission is not granted, the app will not work. Note that some Android versions may not have the \'Read notification permission\' available, which will prevent Retweet from working on those versions.</string>
	<string name="twitter_setup">Retweet relies on Twitter notifications to function. The Twitter app is necessary and must be set up to receive notifications on your phone.</string>
	<string name="setup_detect">The setup process will be finished once Retweet detects a Twitter notification. You can check back later, and we\'ll also send you a notification when it\'s complete.</string>
	<string name="setup_alerts">Once the setup is complete, any tweet alerts received as notifications will be automatically retweeted and liked according to your settings. You can access the settings page after setup to adjust these preferences.</string>
	<string name="enable">Enable</string>
	<string name="read_notifications">Read Notifications</string>
	<string name="about">About</string>
	<string name="app_about">Retweet App allows you to automatically like &amp; retweet Tweets without direct interaction. It is not guaranteed that it will work on all devices since Android OS is highly fragmented. Please check the setup steps below.</string>
	<string name="policy">Privacy Policy</string>
	<string name="terms">Terms &amp; Conditions</string>
	<string name="acc_example">Below is a twitter account utilizing the functionality of this app. Also checkout the source code of the app on Github.</string>
	<string name="twitter_acc">Twitter account</string>
	<string name="source_code">Source code</string>
	<string name="setup_title">Setup Steps</string>
	<string name="enable_notification">Enable Notification access</string>
	<string name="notification_access_info">The retweet app works by accessing Twitter notifications and performing actions on them. Therefore it should be enabled to access notifications. Click on the enable notifcations access This should open the Notification access settings. Enable the Retweet app.</string>
	<string name="access_limitation">NB: Not all Android version may offer this feature to the end user. This is common for android Go editions. Device manufactures choose how to modify the Android OS for their devices. Notification access is critical to the working of this app and must be enabled. If you can\'t enable it for whatever reason, the app won\'t work. This is not something we have control of, therefore we can\'t help. Once enabled, you can test by using the Test Notification feature. The retweet app will create a notification and test if it can read it. If successful, you can enable the functions for the retweet app.</string>
	<string name="enable_twitter">Enable Twitter Notifications</string>
	<string name="twitter_enabled">Now that notification access is enabled, the next step is to ensure you can receive Twitter notifications. Allow the Twitter app to send you notifications by enabling it in your phone settings</string>
	<string name="post_notifications">You also need to Turn on post notifications for a user inside the Twitter app. When the user tweets a post, this notification will be sent to your device. The Retweet app will then read the Twitter notification and perform the retweet &amp; like action if enabled &amp; available. You can turn on post notification for multiple users.</string>
	<string name="setup_complete">Setup Complete</string>
	<string name="setup_complete_info">Once you have completed the setup steps, you no longer need to do anything on the Retweet app. When a Twitter notification is received, the Retweet app will perform the desired functionality as per your settings.</string>
	<string name="faq_title">FAQs</string>
	<string name="stopped_title">Retweets stopped working</string>
	<string name="stopped_text">Some android devices may kill the Retweet app after some time. You will need to check it from time to time and re-enabling notification access when necessary.</string>
	<string name="not_work_title">It doesn\'t work for me</string>
	<string name="not_work_text">As mentioned above, the app is not guaranteed to work on all devices.This is not something we have control over.</string>
	<string name="tagline">Stay Active</string>
	<string name="read">I have read and agree to</string>
	<string name="and">and</string>
	<string name="continue_text">Continue</string>
	<string name="repost">Reposts</string>
	<string name="follows">Follows</string>
	<string name="notification_permission_title">Notification Permissions</string>
	<string name="settings">Settings</string>
	<string name="test_notification">Test notification</string>
	<string name="test">Test</string>
	<string name="disable">Disable</string>
	<string name="auto_repost">Auto-Repost</string>
	<string name="auto_like">Auto-Like</string>
	<string name="auto_follow">Auto-Follow</string>
	<string name="clear_all">Clear all notifications</string>
	<string name="okay">Okay</string>
	<string name="agree_alert">You need to agree to the conditions</string>
	<string name="complete_title">Setup Complete</string>
	<string name="complete_text">Welcome to the Retweet app. Retweeted tweets will appear here once the app receives notifications from Twitter</string>
	<string name="rate_title">Rate &amp; Review</string>
	<string name="rate_text">Don\'t forget to leave us a review on Google Play. Your feedback is highly appreciated</string>
	<string name="post_title">Post Notifications</string>
	<string name="post_text">In order to retweet &amp; like a users tweet, it is recommended to turn on their post notifications</string>
	<string name="optimization_text">Due to Android background execution limits, some tweets may not be shown here. It is recommended to disable battery optimization for the Retweet app</string>
	<string name="optimization_title">Optimization</string>
	<string name="next_text">You have completed the initial setup. Interaction with the app is no longer required as the likes and reposts will be performed automatically. You can check back on the app at least once a day to ensure that it\'s still running</string>
	<string name="next_title">What next?</string>
	<string name="access_enabled">Notification access is enabled</string>
	<string name="access_disabled">Notification access is disabled</string>
	<string name="test_fail">Test Failed</string>
	<string name="test_passed">Test passed</string>
	<string name="change">Change</string>
	<string name="enabled">Enabled</string>
	<string name="twitter_setup_title">Twitter Setup</string>
	<string name="install">Install</string>
	<string name="installed">Installed</string>
	<string name="help">Help</string>
	<string name="run">Run</string>
	<string name="complete">Complete</string>
	<string name="detect_notification">We\'ve detected a notification from Twitter, the setup process is now complete</string>
	<string name="turn_on">Turn on post notifications</string>
	<string name="enable_twitter_check">Ensure that you have enabled notifications from Twitter</string>
	<string name="twitter_required">Twitter app required</string>
	<string name="run_test">Run notification test</string>
	<string name="feature_unavailable">Feature not available?</string>
	<string name="setup">Setup</string>
	<string name="not_test">This is a notification test</string>
	<string name="language">Language</string>
	<string name="okay">Okay</string>
	<string name="save">Save</string>
</resources>